[package]
name = "epoxy"
version = "0.0.2"
authors = ["Maxwell Koo <mjkoo90@gmail.com>"]
description = "Rust bindings for libepoxy, an OpenGL function pointer manager."
repository = "https://github.com/mjkoo/epoxy-rs"
license = "Apache-2.0" 
keywords = ["epoxy", "libepoxy", "opengl", "gl", "gtk"]
build = "build/main.rs"

[build-dependencies]
gl_generator = "^0.1"
khronos_api = "^0"

[dependencies]
libc = "^0.1"
gl_common = "^0.1"
