[package]
authors = ["Maxwell Koo <mjkoo90@gmail.com>"]
build = "build/main.rs"
description = "Rust bindings for libepoxy, an OpenGL function pointer manager."
keywords = ["epoxy", "libepoxy", "opengl", "gl", "gtk"]
license = "Apache-2.0"
name = "epoxy"
repository = "https://github.com/mjkoo/epoxy-rs"
version = "0.0.2"

[build-dependencies]
gl_generator = "0.5.3"

[dependencies]
gl = "0.6.2"
gl_common = "^0.1"
libc = "^0.2"
shared_library = "0.1.5"

[features]
default = ["gl_generator/unstable_generator_utils"]
debug_marker = []
