[package]
authors = ["Maxwell Koo <mjkoo90@gmail.com>"]
build = "build/main.rs"
description = "Rust bindings for libepoxy, an OpenGL function pointer manager."
keywords = ["epoxy", "libepoxy", "opengl", "gl", "gtk"]
license = "Apache-2.0"
name = "epoxy"
repository = "https://github.com/mjkoo/epoxy-rs"
version = "0.1.0"
publish = false

[build-dependencies]
gl_generator = "0.9"
pkg-config = "0.3"

[dependencies]
libc = "0.2"
shared_library = "0.1"

[features]
default = ["gl_generator/unstable_generator_utils"]
debug_marker = []
